server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server

spec: 
  replicas: 5
  selector:
    matchLabels: 
      app: grpc-server

  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers: 
        - name: grpc-server-container
          image: grpc_server
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client

spec: 
  replicas: 5
  selector:
    matchLabels: 
      app: grpc-client

  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers: 
        - name: grpc-client-container
          image: grpc_client
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP


---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
spec:
  type: NodePort
  selector:
    app: grpc-client
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
